--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li class="list"><a href="index.html">About</a></li>
                     <li class="list"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="list"><a href=contact.html">Contact</a></li>
+                    <li class="list"><a href="contact.html">Contact</a></li>
                 </ul>
         
     </header>
