--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
                         <ul>
                             <li class="back"><a href="index.html">About</a></li>
                             <li class="back"><a href="portfolio.html">Portfolio</a></li>
-                            <li class="back"><a href=contact.html">Contact</a></li>
+                            <li class="back"><a href="contact.html">Contact</a></li>
                         </ul>
                 
             </header>
